syntax = "proto3";

package math;

service Math {
    rpc MultiplyByTen (stream Request) returns (stream Response) {}
    rpc IsPrime (Request) returns (IsPrimeResponse) {}
}

message Request {
    int32 num = 1;
}

message Response {
    int32 result = 1;
}

message IsPrimeResponse {
    bool isPrime = 1;
}